# lottery-contract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  test.sh
include/eosrand/: eosrand.hpp
src/: CMakeLists.txt  eosrand.cpp  requests.cpp
